--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,6 +1,6 @@
-
 <html ng-app="app" lang="en">
 <!-- BEGIN HEAD -->
+
 <head>
 	<meta charset="utf-8" />
 	<title>Homes | Page Layouts - Blank Page</title>
@@ -20,46 +20,66 @@
 	<!-- BEGIN THEME STYLES -->
 	<link href="../../assets/global/css/components.css" id="style_components" rel="stylesheet" type="text/css" />
 	<link href="../../assets/global/css/plugins.css" rel="stylesheet" type="text/css" />
+	<link href="../../assets/global/css/main.css" rel="stylesheet" type="text/css" />
 	<link href="../../assets/admin/layout/css/layout.css" rel="stylesheet" type="text/css" />
 	<link id="style_color" href="../../assets/admin/layout/css/themes/darkblue.css" rel="stylesheet" type="text/css" />
 	<link href="../../assets/admin/layout/css/custom.css" rel="stylesheet" type="text/css" />
 	<!-- END THEME STYLES -->
 	<link rel="shortcut icon" href="favicon.ico" />
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"  rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<header  ui-view="header" class="page-header-fixed page-quick-sidebar-over-content"></header>
-<body ui-view="body"></body>
-	<!-- END FOOTER -->
-	<!-- BEGIN JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
-	<!-- BEGIN CORE PLUGINS -->
-	<!--[if lt IE 9]>
+<div ui-view="header" class="page-header-fixed page-quick-sidebar-over-content">
+</div>
+
+<div class="page-container">
+	<div ui-view="menu">
+	</div>
+	<div class="page-content-wrapper">
+		<div class="page-content">
+						<div ui-view="body">
+			</div>
+		</div>
+	</div>
+</div>
+<!-- END FOOTER -->
+<!-- BEGIN JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
+<!-- BEGIN CORE PLUGINS -->
+<!--[if lt IE 9]>
 <script src="../../assets/global/plugins/respond.min.js"></script>
 <script src="../../assets/global/plugins/excanvas.min.js"></script>
 <![endif]-->
+<div class="page-footer">
+	<div class="page-footer-inner text-center">
+		<span>2016 &copy; Homes by LightHouse.</span>
+	</div>
+	<div class="scroll-to-top">
+		<i class="icon-arrow-up"></i>
+	</div>
+</div>
 
-	<script src="../../assets/global/plugins/jquery.min.js" type="text/javascript"></script>
-	<script src="../../assets/global/plugins/jquery-migrate.min.js" type="text/javascript"></script>
-	<!-- IMPORTANT! Load jquery-ui.min.js before bootstrap.min.js to fix bootstrap tooltip conflict with jquery ui tooltip -->
-	<script src="../../assets/global/plugins/jquery-ui/jquery-ui.min.js" type="text/javascript"></script>
-	<script src="../../assets/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-	<script src="../../assets/global/plugins/bootstrap-hover-dropdown/bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
-	<script src="../../assets/global/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
-	<script src="../../assets/global/plugins/jquery.blockui.min.js" type="text/javascript"></script>
-	<script src="../../assets/global/plugins/jquery.cokie.min.js" type="text/javascript"></script>
-	<script src="../../assets/global/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
-	<script src="../../assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
+<script src="../../assets/global/plugins/jquery.min.js" type="text/javascript"></script>
+<script src="../../assets/global/plugins/jquery-migrate.min.js" type="text/javascript"></script>
+<!-- IMPORTANT! Load jquery-ui.min.js before bootstrap.min.js to fix bootstrap tooltip conflict with jquery ui tooltip -->
+<script src="../../assets/global/plugins/jquery-ui/jquery-ui.min.js" type="text/javascript"></script>
+<script src="../../assets/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="../../assets/global/plugins/bootstrap-hover-dropdown/bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
+<script src="../../assets/global/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
+<script src="../../assets/global/plugins/jquery.blockui.min.js" type="text/javascript"></script>
+<script src="../../assets/global/plugins/jquery.cokie.min.js" type="text/javascript"></script>
+<script src="../../assets/global/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
+<script src="../../assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
 
-	<!-- END CORE PLUGINS -->
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.min.js"></script>
-	<script src="../../assets/global/scripts/metronic.js" type="text/javascript"></script>
-		<script src="../../templates/admin/app.js" type="text/javascript"></script>
-	<script src="../../assets/admin/layout/scripts/layout.js" type="text/javascript"></script>
-	<script src="../../assets/admin/layout/scripts/quick-sidebar.js" type="text/javascript"></script>
-	<script src="../../assets/admin/layout/scripts/demo.js" type="text/javascript"></script>
+<!-- END CORE PLUGINS -->
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.min.js"></script>
+<script src="../../assets/global/scripts/metronic.js" type="text/javascript"></script>
+<script src="../../templates/admin/app.js" type="text/javascript"></script>
+<script src="../../assets/admin/layout/scripts/layout.js" type="text/javascript"></script>
+<script src="../../assets/admin/layout/scripts/quick-sidebar.js" type="text/javascript"></script>
+<script src="../../assets/admin/layout/scripts/demo.js" type="text/javascript"></script>
 
-	<!-- END JAVASCRIPTS -->
+<!-- END JAVASCRIPTS -->
 
 <!-- END BODY -->
 
