--- a/templates/admin/new_resident.html
+++ b/templates/admin/new_resident.html
@@ -45,54 +45,59 @@
                         <h3 class="text-center"><label for="imgInp"  class="btn default btn-file fileinput-new">Subir imagen</label></h3>
                         <input type='file' id="imgInp" />
 
+                        <div class="col-md-6">
 
-                        <div class="form-group form-md-line-input form-md-floating-label">
-                            <input type="text" class="form-control" id="form_control_1">
-                            <label for="form_control_1">Nombre</label>
-                        </div>
-                        <div class="form-group form-md-line-input form-md-floating-label">
-                            <input type="text" class="form-control" id="form_control_1">
-                            <label for="form_control_1">Primer Apellido</label>
-                        </div>
-                        <div class="form-group form-md-line-input form-md-floating-label">
-                            <input type="text" class="form-control" id="form_control_1">
-                            <label for="form_control_1">Segundo Apellido</label>
-                        </div>
-                        <div class="form-group form-md-line-input form-md-floating-label">
-                            <input type="text" class="form-control" id="form_control_1">
-                            <label for="form_control_1">Cédula</label>
+                            <div class="form-group form-md-line-input form-md-floating-label">
+                                <input type="text" class="form-control" id="form_control_1">
+                                <label for="form_control_1">Nombre</label>
+                            </div>
+                            <div class="form-group form-md-line-input form-md-floating-label">
+                                <input type="text" class="form-control" id="form_control_1">
+                                <label for="form_control_1">Primer Apellido</label>
+                            </div>
+                            <div class="form-group form-md-line-input form-md-floating-label">
+                                <input type="text" class="form-control" id="form_control_1">
+                                <label for="form_control_1">Segundo Apellido</label>
+                            </div>
+                            <div class="form-group form-md-line-input form-md-floating-label">
+                                <input type="text" class="form-control" id="form_control_1">
+                                <label for="form_control_1">Cédula</label>
+                            </div>
+
                         </div>
 
 
-
-                        <div class="form-group form-md-line-input form-md-floating-label">
-                            <input type="text" class="form-control" id="form_control_1">
-                            <label for="form_control_1">Número celular</label>
-                            <span class="help-block">(Opcional)</span>
-                        </div>
-                        <div class="form-group form-md-line-input form-md-floating-label">
-                            <input type="email" class="form-control" id="form_control_1">
-                            <label for="form_control_1">Correo electrónico</label>
-                            <span class="help-block">(Opcional)</span>
-                        </div>
-                        <div class="form-group form-md-line-input form-md-floating-label has-info">
-                            <select class="form-control" id="form_control_1">
+                        <div class="col-md-6">
+                            <div class="form-group form-md-line-input form-md-floating-label">
+                                <input type="text" class="form-control" id="form_control_1">
+                                <label for="form_control_1">Número celular</label>
+                                <span class="help-block">(Opcional)</span>
+                            </div>
+                            <div class="form-group form-md-line-input form-md-floating-label">
+                                <input type="email" class="form-control" id="form_control_1">
+                                <label for="form_control_1">Correo electrónico</label>
+                                <span class="help-block">(Opcional)</span>
+                            </div>
+                            <div class="form-group form-md-line-input form-md-floating-label has-info">
+                                <select class="form-control" id="form_control_1">
                             <option value=""></option>
                             <option value="1">Option 1</option>
                             <option value="2">Option 2</option>
                             <option value="3">Option 3</option>
                             <option value="4">Option 4</option>
                           </select>
-                            <label for="form_control_1">Número de casa</label>
+                                <label for="form_control_1">Número de casa</label>
+                            </div>
+                            <div class="form-group form-md-line-input form-md-floating-label">
+                                <input type="text" class="form-control date-picker" id="form_control_2">
+                                <label for="form_control_2">Fecha de nacimiento</label>
+                            </div>
                         </div>
-                        <div class="form-group form-md-line-input form-md-floating-label">
-                            <input type="text" class="form-control date-picker" id="form_control_2">
-                            <label for="form_control_2">Fecha de nacimiento</label>
-                        </div>
-
                         <div class="form-actions noborder">
+                            <h3 class="text-right">
                             <button type="button" class="btn blue">Aceptar</button>
                             <button type="button" class="btn default">Cancelar</button>
+                          </h3>
                         </div>
                 </form>
                 </div>
