--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -76,7 +76,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.min.js"></script>
 <script src="../../assets/global/scripts/metronic.js" type="text/javascript"></script>
-<script src="../../templates/admin/app.js" type="text/javascript"></script>
+<script src="../../assets/global/scripts/app.js" type="text/javascript"></script>
+<script src="../../assets/global/scripts/residentController.js" type="text/javascript"></script>
+<!-- <script src="../../templates/admin/app.js" type="text/javascript"></script>
+<script src="../../templates/admin/residentController.js" type="text/javascript"></script> -->
 <script src="../../assets/admin/layout/scripts/layout.js" type="text/javascript"></script>
 <script src="../../assets/admin/layout/scripts/quick-sidebar.js" type="text/javascript"></script>
 <script src="../../assets/admin/layout/scripts/demo.js" type="text/javascript"></script>
