--- a/templates/admin/menu.html
+++ b/templates/admin/menu.html
@@ -45,9 +45,9 @@
             <span class="arrow "></span>
         </a>
         <ul class="sub-menu">
-          <li>
+          <li ui-sref="residents()">
             <a href="ecommerce_index.html">
-              <i class="fa fa-users" aria-hidden="true"></i> Residentes
+              <i class="fa fa-users" aria-hidden="true" ></i> Residentes
             </a>
           </li>
           <li>
