--- a/templates/admin/new_car.html
+++ b/templates/admin/new_car.html
@@ -29,8 +29,8 @@
         <div class="portlet light bordered">
             <div class="portlet-title">
                 <div class="caption font-green-haze">
-                    <i class="fa fa-user font-green-haze"></i>
-                    <span class="caption-subject bold uppercase">Registrar residente</span>
+                    <i class="fa fa-car font-green-haze"></i>
+                    <span class="caption-subject bold uppercase">Registrar vehiculo</span>
                 </div>
                 <div class="actions">
                     <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title="">
@@ -40,46 +40,27 @@
             <div class="portlet-body form">
                 <form role="form">
                     <div class="form-body">
-
-                        <h3 class="text-center"><img id="blah" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" alt="your image" width="200px" height="200px" class="img-circle"/></h3>
-                        <h3 class="text-center"><label for="imgInp"  class="btn default btn-file fileinput-new">Subir imagen</label></h3>
-                        <input type='file' id="imgInp" />
-
                         <div class="col-md-6">
 
                             <div class="form-group form-md-line-input form-md-floating-label">
                                 <input type="text" class="form-control" id="form_control_1">
-                                <label for="form_control_1">Nombre</label>
+                                <label for="form_control_1">Número de placa</label>
                             </div>
-                            <div class="form-group form-md-line-input form-md-floating-label">
-                                <input type="text" class="form-control" id="form_control_1">
-                                <label for="form_control_1">Primer Apellido</label>
+                            <div class="form-group form-md-line-input form-md-floating-label has-info">
+                                <select class="form-control" id="form_control_1">
+                            <option value=""></option>
+                            <option value="1">Option 1</option>
+                            <option value="2">Option 2</option>
+                            <option value="3">Option 3</option>
+                            <option value="4">Option 4</option>
+                          </select>
+                                <label for="form_control_1">Marca</label>
                             </div>
-                            <div class="form-group form-md-line-input form-md-floating-label">
-                                <input type="text" class="form-control" id="form_control_1">
-                                <label for="form_control_1">Segundo Apellido</label>
-                            </div>
-                            <div class="form-group form-md-line-input form-md-floating-label">
-                                <input type="text" class="form-control" id="form_control_1">
-                                <label for="form_control_1">Cédula</label>
-                            </div>
-
                         </div>
-
-
                         <div class="col-md-6">
-                          <div class="form-group form-md-line-input form-md-floating-label">
-                              <input type="text" class="form-control date-picker" id="form_control_2">
-                              <label for="form_control_2">Fecha de nacimiento</label>
-                          </div>
                             <div class="form-group form-md-line-input form-md-floating-label">
                                 <input type="text" class="form-control" id="form_control_1">
-                                <label for="form_control_1">Número celular</label>
-                                <span class="help-block">(Opcional)</span>
-                            </div>
-                            <div class="form-group form-md-line-input form-md-floating-label">
-                                <input type="email" class="form-control" id="form_control_1">
-                                <label for="form_control_1">Correo electrónico</label>
+                                <label for="form_control_1">Color</label>
                                 <span class="help-block">(Opcional)</span>
                             </div>
                             <div class="form-group form-md-line-input form-md-floating-label has-info">
@@ -92,7 +73,6 @@
                           </select>
                                 <label for="form_control_1">Número de casa</label>
                             </div>
-
                         </div>
                         <div class="form-actions noborder">
                             <h3 class="text-right">
@@ -108,25 +88,3 @@
             <!--CONTENIDO FINALIZA AQUI -->
         </div>
     </div>
-    <script type="text/javascript">
-        $('.date-picker').datepicker({
-            format: 'mm/dd/yyyy',
-            language: "es"
-        });
-
-        function readURL(input) {
-            if (input.files && input.files[0]) {
-                var reader = new FileReader();
-
-                reader.onload = function(e) {
-                    $('#blah').attr('src', e.target.result);
-                }
-
-                reader.readAsDataURL(input.files[0]);
-            }
-        }
-
-        $("#imgInp").change(function() {
-            readURL(this);
-        });
-    </script>
