Fixing vehicule frontend

--- a/templates/admin/new_vehicule.html
+++ b/templates/admin/new_vehicule.html
@@ -7,7 +7,7 @@
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
-            <a href="#">Residentes</a>
+            <a href="#">Vehículos</a>
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
@@ -30,7 +30,7 @@
             <div class="portlet-title">
                 <div class="caption font-green-haze">
                     <i class="fa fa-car font-green-haze"></i>
-                    <span class="caption-subject bold uppercase">Registrar vehiculo</span>
+                    <span class="caption-subject bold uppercase">Registrar vehículo</span>
                 </div>
                 <div class="actions">
                     <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title="">
@@ -58,10 +58,10 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="form-group form-md-line-input form-md-floating-label">
-                                <input type="text" class="form-control" id="form_control_1">
-                                <label for="form_control_1">Color</label>
-                                <span class="help-block">(Opcional)</span>
+                            <div class="form-group form-md-line-input form-md-floating-label has-info">
+                                <button class="jscolor {valueElement:null,value:'ffff'} btn btn-default" style="width:100%">
+                                Color del vehículo
+                            </button>
                             </div>
                             <div class="form-group form-md-line-input form-md-floating-label has-info">
                                 <select class="form-control" id="form_control_1">
@@ -83,8 +83,4 @@
                 </form>
                 </div>
             </div>
-
-
-            <!--CONTENIDO FINALIZA AQUI -->
-        </div>
-    </div>
+  <script src="../../assets/global/scripts/jscolor.js"></script>
