--- a/templates/admin/menu.html
+++ b/templates/admin/menu.html
@@ -56,7 +56,7 @@
             </a>
           </li>
           <li>
-            <a href="ecommerce_orders_view.html">
+            <a  ui-sref="newVehicule()">
               <i class="fa fa-car" aria-hidden="true"></i> Vehiculos</a>
           </li>
         </ul>
