--- a/assets/global/css/main.css
+++ b/assets/global/css/main.css
@@ -1,44 +1,104 @@
-.text-center{
-  text-align: center;
+#login {
+    background-color: white !important;
 }
 
-.no-margin{
-  margin: 0 !important;
+.carousel-inner>.item>a>img, .carousel-inner>.item>img, .img-responsive, .thumbnail a>img, .thumbnail>img {
+    height: 100%;
+    width: 100%;
 }
 
-.no-padding{
-  padding: 0 !important;
+body {
+    background-color: white !important;
 }
 
-.absolute{
-  position: absolute !important;
+a {
+    color: #a4aab2;
+    /* blue colors for links too */
+    text-decoration: none;
+    /* no underline */
 }
 
-.route-title{
-  margin:-24px -20px;
-  padding:0px 15px !important;
+a:hover {
+    color: #337ab7;
+    text-decoration: none;
 }
+
+blue {
+    background-color: #3598dc
+}
+
+.float-right {
+    float: right;
+}
+
+.huge-margin-top {
+    margin-top: 50px;
+}
+
+.medium-magin-top {
+    margin-top: 20px;
+}
+
+.small-margin-bottom {
+    margin-bottom: 15px;
+}
+
+.medium-padding {
+    padding: 70px;
+}
+
+.login-hide-2 {
+    height: 170px;
+}
+
+.login-hide-1 {
+    height: 170px;
+}
+
+.gray {
+    background-color: #364150 !important;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.no-margin {
+    margin: 0 !important;
+}
+
+.no-padding {
+    padding: 0 !important;
+}
+
+.absolute {
+    position: absolute !important;
+}
+
+.route-title {
+    margin: -24px -20px;
+    padding: 0px 15px !important;
+}
+
 #imgInp {
-   opacity: 0;
-   position: absolute;
-   z-index: -1;
+    opacity: 0;
+    position: absolute;
+    z-index: -1;
 }
 
-.text-right{
-  text-align: right;
+.text-right {
+    text-align: right;
 }
 
-
-.font-12{
-font-size: 13px !important;
-color: #616161 !important;
-
+.font-12 {
+    font-size: 13px !important;
+    color: #616161 !important;
 }
 
-.search-bar{
-  border: 1px solid #ddd;
-  border-radius: 3px;
-  padding: 10px;
-  outline: none;
-  margin-bottom: 10px;
+.search-bar {
+    border: 1px solid #ddd;
+    border-radius: 3px;
+    padding: 10px;
+    outline: none;
+    margin-bottom: 10px;
 }
