--- a/frontend/templates/admin/index.html
+++ b/frontend/templates/admin/index.html
@@ -78,6 +78,7 @@
 <script src="../../assets/global/scripts/metronic.js" type="text/javascript"></script>
 <script src="../../assets/global/scripts/app.js" type="text/javascript"></script>
 <script src="../../assets/global/scripts/residentController.js" type="text/javascript"></script>
+<script src="../../assets/global/scripts/houseController.js" type="text/javascript"></script>
 <!-- <script src="../../templates/admin/app.js" type="text/javascript"></script>
 <script src="../../templates/admin/residentController.js" type="text/javascript"></script> -->
 <script src="../../assets/admin/layout/scripts/layout.js" type="text/javascript"></script>
