--- a/frontend/templates/admin/menu.html
+++ b/frontend/templates/admin/menu.html
@@ -56,9 +56,9 @@
             </a>
           </li>
           <li>
-            <a  ui-sref="newVehicule()">
+            <!-- <a  ui-sref="newVehicule()">
               <i class="fa fa-car" aria-hidden="true"></i> Vehiculos</a>
-          </li>
+          </li> -->
         </ul>
       </li>
       <li>
