--- a/frontend/templates/admin/resident/index_resident.html
+++ b/frontend/templates/admin/resident/index_resident.html
@@ -75,7 +75,7 @@
                                                 <td>{{resident.house_id}}</td>
                              <td><a ui-sref="viewSubCategory({id:subcategory.id})">Ver detalle</a></td>
                            <td> <a ui-sref="editResident({id:resident.id})">Editar</a></td>
-                           <td> <a ng-click="deleteSubCategory(subcategory.id)">Eliminar</a></td>
+                           <td> <a ng-click="deleteResident(resident.id)">Eliminar</a></td>
                          </tr>
 
 <!--
