--- a/frontend/templates/admin/index.html
+++ b/frontend/templates/admin/index.html
@@ -18,6 +18,8 @@
 	<link href="../../assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
 	<!-- END GLOBAL MANDATORY STYLES -->
 	<!-- BEGIN THEME STYLES -->
+
+
 	<link href="../../assets/global/css/components.css" id="style_components" rel="stylesheet" type="text/css" />
 	<link href="../../assets/global/css/plugins.css" rel="stylesheet" type="text/css" />
 	<link href="../../assets/global/css/main.css" rel="stylesheet" type="text/css" />
@@ -70,6 +72,8 @@
 <script src="../../assets/global/scripts/app.js" type="text/javascript"></script>
 <script src="../../assets/global/scripts/residentController.js" type="text/javascript"></script>
 <script src="../../assets/global/scripts/houseController.js" type="text/javascript"></script>
+<script src="../../assets/global/scripts/bootbox.min.js" type="text/javascript"></script>
+
 <!-- <script src="../../templates/admin/app.js" type="text/javascript"></script>
 <script src="../../templates/admin/residentController.js" type="text/javascript"></script> -->
 <script src="../../assets/admin/layout/scripts/layout.js" type="text/javascript"></script>
