--- a/frontend/assets/global/css/main.css
+++ b/frontend/assets/global/css/main.css
@@ -11,6 +11,9 @@ body {
     background-color: white !important;
 }
 
+.max-width{
+  width: 100% !important;
+}
 a {
     color: #a4aab2;
     /* blue colors for links too */
@@ -38,7 +41,9 @@ blue {
 .medium-magin-top {
     margin-top: 20px;
 }
-
+.small-margin-top{
+  margin-top: 20px !important;
+}
 .small-margin-bottom {
     margin-bottom: 15px;
 }
